@@ -3,7 +3,6 @@ using System.Linq;
 using System.Windows;
 using System.Windows.Controls;
 using System.Windows.Input;
-using GraphX;
 using GraphX.PCL.Common.Enums;
 using GraphX.WPF.Controls;
 using Microsoft.Win32;
