@@ -33,6 +33,10 @@ namespace GraphX.WPF.Controls
 
         #region My properties
 
+        /// <summary>
+        /// Gets or sets in which order GraphX controls are drawn
+        /// </summary>
+        public ControlDrawOrder ControlsDrawOrder { get; set; }
 
         public static readonly DependencyProperty LogicCoreProperty =
             DependencyProperty.Register("LogicCore", typeof(IGXLogicCore<TVertex, TEdge, TGraph>), typeof(GraphArea<TVertex, TEdge, TGraph>), new UIPropertyMetadata(null, logic_core_changed));
@@ -418,7 +422,9 @@ namespace GraphX.WPF.Controls
             _edgeslist.Add(edgeData, edgeControl);
             try
             {
-                base.Children.Insert(num, edgeControl);
+                if (ControlsDrawOrder == ControlDrawOrder.VerticesOnTop || num != 0)
+                    base.Children.Insert(num, edgeControl);
+                else base.Children.Add(edgeControl);
             }
             catch (Exception ex)
             {
