@@ -1,0 +1,11 @@
+﻿namespace GraphX.WPF.Controls
+{
+    /// <summary>
+    /// Defines in which order GraphX controls are drawn
+    /// </summary>
+    public enum ControlDrawOrder
+    {
+        VerticesOnTop = 1,
+        EdgesOnTop
+    }
+}
